# mqtt-ec2-ci

./: .gitignore  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: mqtt-ci.yml
broker/: Dockerfile  mosquitto.conf
scripts/: local-run.sh
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_mqtt_protocol.py
